--- a/src/components/ExpenseItem.css
+++ b/src/components/ExpenseItem.css
@@ -9,7 +9,7 @@
     background-color: lightgray;
 }
 
-.beauty-date {
+.expense-date {
     display: flex;
     padding: 2px;
 
@@ -57,5 +57,32 @@
     .expense-item__price {
         font-size: 1.25rem;
         padding: 0.5rem 1.5rem;
+    }
+    .expense-date {
+        display: flex;
+        flex-direction: column;
+        width: 5.5rem;
+        height: 5.5rem;
+        border: 1px solid #ececec;
+        background-color: #2a2a2a;
+        color: white;
+        border-radius: 12px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .expense-date__month {
+        font-size: 0.75rem;
+        font-weight: bold;
+    }
+
+    .expense-date__year {
+        font-size: 0.75rem;
+        font-weight: bold;
+    }
+
+    .expense-date__day {
+        font-size: 1.5rem;
+        font-weight: bold;
     }
 }
